@@ -1,8 +1,19 @@
 package com.meetime.hubspot_integration.application.exceptions;
 
-public class OAuthException extends HubSpotIntegrationException {
+import lombok.Getter;
 
-    public OAuthException(String error, String errorDescription) {
-        super(String.format("OAuth error: %s - %s", error, errorDescription));
+@Getter
+public class OAuthException extends RuntimeException {
+    private final String errorCode;
+    private final String errorDescription;
+
+    public OAuthException(String errorCode, String errorDescription) {
+        super("OAuth error [%s]: %s".formatted(errorCode, errorDescription));
+        this.errorCode = errorCode;
+        this.errorDescription = errorDescription;
+    }
+
+    public static OAuthException invalidToken(String details) {
+        return new OAuthException("invalid_token", "token: " + details);
     }
 }
